[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ski-memory"
version = "0.1.0"
description = "Sovereign, local-first memory app for heavy AI users. Import your Claude/ChatGPT/Grok history into a verifiable local knowledge graph."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "KpiFinity Inc." }]
keywords = ["ski", "knowledge-graph", "sovereign", "local-first", "llm", "ollama"]

dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "cryptography>=42.0",
    "pystray>=0.19",
    "pillow>=10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
]

[project.scripts]
ski-memory = "ski_memory.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["ski_memory*"]

[tool.setuptools.package-data]
ski_memory = ["web/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
